done :  - animate filter layout(horizontally , vertically)  - menu open home  - open event details from home  - filter arabic screens  - filter radioButtons , checkboxes style  - add logout , language to menu  - switch app Language
not done :
 - confirm dialog to switch language
 - confirm dialog to logout
 - logout
 - menu open same item
 - apply fonts
 - Map reload
 - tool bar back button

-Not Done Pages :
 -language page after splash
   (first time open)
 -Eservices
 -Contact us
 -About us

--- a/SECB/app/src/main/res/drawable/shadow_v.xml
+++ b/SECB/app/src/main/res/drawable/shadow_v.xml
@@ -6,7 +6,7 @@
         android:startColor="#5fff"
         android:endColor="#9444"
         android:type="linear"
-        android:angle="270"> <!-- Change this value to have the correct shadow angle, must be multiple from 45 -->
+        android:angle="180"> <!-- Change this value to have the correct shadow_h angle, must be multiple from 45 -->
     </gradient>
 
 </shape>
