--- a/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/organizers_filter_screen.xml
@@ -27,10 +27,10 @@
         android:id="@+id/filter_container"
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:clickable="true"
         android:layout_height="match_parent"
         android:background="@drawable/filter_bg"
         android:orientation="vertical"
+        android:clickable="true"
         android:padding="@dimen/news_filter_padding">
 
         <!--time input-->
@@ -40,7 +40,18 @@
             android:background="@color/white"
             android:paddingLeft="@dimen/news_filter_padding"
             android:paddingRight="@dimen/news_filter_padding">
-
+            <!--from value-->
+            <EditText
+                android:id="@+id/txtv_news_filter_time_from_value"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:text=""
+                android:layout_height="match_parent"
+                android:textColor="@color/secb_grey_text"
+                android:gravity="center_vertical"
+                android:hint="@string/hint_name"
+                android:textSize="@dimen/news_filter_text_size" />
             <!--name title-->
             <TextView
                 android:id="@+id/txtv_news_filter_time_from_title"
@@ -52,17 +63,7 @@
                 android:gravity="center_vertical"
                 android:textSize="@dimen/news_filter_text_size" />
 
-            <!--from value-->
-            <EditText
-                android:id="@+id/txtv_news_filter_time_from_value"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:text=""
-                android:layout_height="match_parent"
-                android:textColor="@color/secb_grey_text"
-                android:gravity="center_vertical"
-                android:textSize="@dimen/news_filter_text_size" />
+
         </TableRow>
 
         <View
@@ -77,6 +78,18 @@
             android:orientation="horizontal"
             android:paddingLeft="@dimen/news_filter_padding"
             android:paddingRight="@dimen/news_filter_padding">
+            <!--city value-->
+            <EditText
+                android:id="@+id/txtv_city_filter_city_value"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:text=""
+                android:layout_height="match_parent"
+                android:textColor="@color/secb_grey_text"
+                android:gravity="center_vertical"
+                android:hint="@string/hint_city"
+                android:textSize="@dimen/news_filter_text_size" />
             <!--city title-->
             <TextView
                 android:id="@+id/txtv_city_filter_city_title"
@@ -88,17 +101,7 @@
                 android:gravity="center_vertical"
                 android:textSize="@dimen/news_filter_text_size" />
 
-            <!--city value-->
-            <EditText
-                android:id="@+id/txtv_city_filter_city_value"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:text=""
-                android:layout_height="match_parent"
-                android:textColor="@color/secb_grey_text"
-                android:gravity="center_vertical"
-                android:textSize="@dimen/news_filter_text_size" />
+
 
         </TableRow>
 
