--- a/SECB/app/src/main/res/layout/custom_date_time_picker_dialog.xml
+++ b/SECB/app/src/main/res/layout/custom_date_time_picker_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:gravity="center">
-
     <DatePicker
         android:id="@+id/datePickerDay"
         android:layout_width="match_parent"
@@ -16,5 +16,6 @@
         android:id="@+id/timePickerTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:timePickerMode="spinner"/>
+        android:timePickerMode="spinner"
+    android:visibility="gone"/>
 </LinearLayout>
