--- a/SECB/app/src/main/res/layout-ar/event_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_item_card.xml
@@ -5,10 +5,10 @@
     android:orientation="horizontal"
     android:paddingTop="@dimen/event_card_margin"
     android:paddingBottom="@dimen/event_card_margin"
-    android:layout_marginRight="@dimen/event_card_margin"
     android:weightSum="3"
     android:background="@color/off_white"
-
+    android:layout_marginBottom="@dimen/eguide_base_padding"
+    android:layout_marginTop="@dimen/eguide_base_padding"
     >
     <LinearLayout
         android:layout_width="0dp"
